change editor to simditor

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -1,7 +1,6 @@
 /*
  *= require semantic-ui
- *= require froala_editor.min.css
- *= require froala_style.min.css
+ *= require simditor
  *= require_tree .
  *= require_self
  */
