--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -60,7 +60,7 @@
         <% end %>
         <%= link_to content_tag('i',nil,class:'user icon'), profile_path, class:'item' %>
         <%= link_to content_tag('i',nil,class:'setting icon'), setting_path, class:'item' %>
-        <%= link_to content_tag('i',nil,class:'sign out icon'), session_path,
+        <%= link_to content_tag('i',nil,class:'sign out icon'), signout_path,
               method: :delete,class:'item' %>
       </div>
     </div>
