--- a/app/assets/javascripts/application.js.erb
+++ b/app/assets/javascripts/application.js.erb
@@ -6,13 +6,17 @@
 //= require_tree .
 
 $(document).on("ready page:load", function() {
-  // Initialize semantic-ui sidebar module
+  // Semantic-UI
+  // Initialize sidebar module
   $('.sidebar-toggle').click(function(){
     $('.sidebar').sidebar('toggle');
   })
-
-  // Initialize semantic-ui dropdown module
+  // Initialize dropdown module
   $('.dropdown').dropdown();
+  // Initialize dismissable message collection
+  $('.message .close').on('click', function() {
+    $(this).closest('.message').fadeOut();
+  });
 
   // replace rails default error tags with semantic-ui error classes
   var error_fields = $('.field_with_errors');
@@ -20,17 +24,20 @@ $(document).on("ready page:load", function() {
   error_fields.children().unwrap();
 
   // Initialize Simditor
-  var editor = new Simditor({
-    textarea: $('.editor'),
-    toolbar: ['title', 'bold', 'italic', 'underline', 'strikethrough', 'color',
-              '|', 'ol', 'ul', 'blockquote', 'code', 'table', 'link', 'image', 'hr',
-              '|', 'indent', 'outdent',
-              '|', 'source'],
-    pasteImage: true,
-    defaultImage: '<%= image_path('upload-loading.png') %>',
-    upload: {
-      url: '/upload'
-    }
-  });
+  var textarea = $('.editor');
+  if(textarea.length > 0) {
+    var editor = new Simditor({
+      textarea: textarea,
+      toolbar: ['title', 'bold', 'italic', 'underline', 'strikethrough', 'color',
+                '|', 'ol', 'ul', 'blockquote', 'code', 'table', 'link', 'image', 'hr',
+                '|', 'indent', 'outdent',
+                '|', 'source'],
+      pasteImage: true,
+      defaultImage: '<%= image_path('upload-loading.png') %>',
+      upload: {
+        url: '/upload'
+      }
+    });
+  }
 
 });
