--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -32,3 +32,11 @@
   .visible-lg-block { display: inline; }
   .visible-lg-inline-block { display: inline-block; }
 }
+
+.sessions {
+  background-size: cover;
+  background-attachment: fixed;
+  .segment {
+    background-color: rgba(255,255,255,0.8);
+  }
+}
