--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -8,15 +8,15 @@
   <%= form_tag news_index_path, method:'GET', class:"ui form" do %>
     <div class="inline fields">
       <div class="field">
-        <%= text_field_tag :search, params[:search] %>
+        <%= text_field_tag :search, params[:search], placeholder:t('.search') %>
       </div>
       <div class="field">
-        <%= submit_tag t('.button.search'), class:"ui blue button" %>
+        <%= submit_tag t('.search'), class:"ui blue button" %>
       </div>
     </div>
   <% end %>
   <%= link_to new_news_path, class:"ui green labeled icon button" do %>
-    <i class="plus icon"></i><%=t '.button.new' %>
+    <i class="plus icon"></i><%=t '.new' %>
   <% end %>
 </div>
 
@@ -39,7 +39,8 @@
         <td><%=l item.created_at, :format=>:short %></td>
         <td><%= item.hits %></td>
         <td><%= link_to 'Edit', edit_news_path(item) %>
-          <%= link_to 'Destroy', item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <%= link_to 'Destroy', item, method: :delete,
+              data: { confirm: t('.table.delete_confirm') } %></td>
       </tr>
     <% end %>
   </tbody>
