simplify the login form

--- a/app/views/news/index.html.erb
+++ b/app/views/news/index.html.erb
@@ -23,11 +23,10 @@
 <table class="ui table segment">
   <thead>
     <tr>
-      <th class="six wide"><%=t '.table.title' %></th>
+      <th class="ten wide"><%=t '.table.title' %></th>
       <th class="two wide"><%=t '.table.author' %></th>
       <th class="two wide"><%=t '.table.time' %></th>
       <th class="two wide"><%=t '.table.hits' %></th>
-      <th class="two wide"></th>
     </tr>
   </thead>
 
