--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -101,7 +101,7 @@
         <%= f.text_field :title %>
       </div>
       <div class="field">
-        <%= f.label :document, t('.modal.document') %>
+        <%= f.label :document, t('.modal.resource.document') %>
         <%= f.file_field :document %>
       </div>
       <div class="field">
