--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -50,7 +50,7 @@
   <div class="two fields">
     <div class="field">
       <%= f.label :position, t('.position') %>
-      <%= f.email_field :position %>
+      <%= f.text_field :position %>
     </div>
 
     <div class="field">
@@ -79,7 +79,7 @@
   <div class="two fields">
     <div class="field">
       <%= f.label :state, t('.state') %>
-      <%= f.email_field :state %>
+      <%= f.text_field :state %>
     </div>
 
     <div class="field">
