--- a/app/views/passwords/edit.html.erb
+++ b/app/views/passwords/edit.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 <% end %>
-<%= form_for(:password, url: edit_password_path,html:{class:'ui form segment'}) do |f| %>
+<%= form_for(:password, url: password_path, method: :put, html:{class:'ui form segment'}) do |f| %>
   <div class="field">
     <%= f.label :new, t('.new') %>
     <%= f.password_field :new, placeholder: t('.new'), required: :required  %>
@@ -20,4 +20,5 @@
     <%= f.password_field :repeat, placeholder: t('.repeat'), required: :required  %>
   </div>
   <%= f.submit t('.submit'), class: "fluid ui blue button" %>
+  <%= f.hidden_field :token, value: @user.reset_password_token %>
 <% end %>
