--- a/app/views/password_mailer/reset_password_email.html.erb
+++ b/app/views/password_mailer/reset_password_email.html.erb
@@ -1,8 +1,16 @@
-<p>请将以下地址复制到地址栏中访问</p>
+<p>
+  <%= t('.copy_to_browser') %>
+</p>
 
 <p>
-  <%= url_for(controller: 'passwords', action: 'edit'
+  <%= url_for(controller: 'passwords', action: 'edit',
       token: @user.reset_password_token, only_path: false) %>
 </p>
 
-<p>有效期至<%=l @user.reset_password_time + 3.day %></p>
+<p>
+  <%= t('.expire', time: l(@user.reset_password_time + 3.day, format: :long)) %>
+</p>
+
+<p>
+  <%= t('app.name.long') %>
+</p>
