--- a/app/assets/javascripts/editor.js.coffee.erb
+++ b/app/assets/javascripts/editor.js.coffee.erb
@@ -13,4 +13,4 @@ $(document).on 'ready page:load', ->
       ]
       pasteImage: true
       defaultImage: '<%= image_path "upload-loading.png" %>'
-      upload: url: '<%= ENV["RAILS_RELATIVE_URL_ROOT"]||'' + "/pictures" %>')
+      upload: url: '<%= (ENV["RAILS_RELATIVE_URL_ROOT"]||'') + "/pictures" %>')
