--- a/app/assets/javascripts/editor.js.coffee.erb
+++ b/app/assets/javascripts/editor.js.coffee.erb
@@ -13,8 +13,22 @@ $(document).on 'ready page:load', ->
       ]
       pasteImage: true
       defaultImage: '<%= image_path "upload-loading.png" %>'
-      upload: url: '<%= (ENV["RAILS_RELATIVE_URL_ROOT"]||'') + "/pictures" %>')
+      upload: url: '<%= (ENV["RAILS_RELATIVE_URL_ROOT"]||'') + "/pictures" %>'
       allowedTags: [
-        'br', 'a', 'img', 'b', 'strong', 'i', 'u', 'font', 'p', 'ul', 'ol'
+        'br', 'a', 'img', 'b', 'strong', 'i', 'u', 'font', 'p', 'ul', 'ol',
         'li', 'blockquote', 'pre', 'h1', 'h2', 'h3', 'h4', 'hr', 'embed'
       ]
+      allowedAttributes:
+        img: ['src', 'alt', 'width', 'height', 'data-image-src',
+          'data-image-size', 'data-image-name', 'data-non-image']
+        a: ['href', 'target']
+        font: ['color']
+        pre: ['data-lang', 'class']
+        p: ['data-indent']
+        h1: ['data-indent']
+        h2: ['data-indent']
+        h3: ['data-indent']
+        h4: ['data-indent']
+        embed: ['src', 'allowFullScreen', 'quality', 'width', 'height', 'align',
+          'allowScriptAccess', 'type']
+    )
