use 'kaminari' as paginator

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -74,7 +74,7 @@
         </div>
       </div>
       <%= link_to content_tag('i',nil,class:'envelope icon'), messages_path,
-          class:'item', 'data-content':t('menu.popup.messages') %>
+          class:'item', 'data-content' => t('menu.popup.messages') %>
     </div>
   </div>
   <!-- main -->
