--- a/app/views/meetings/_form.html.erb
+++ b/app/views/meetings/_form.html.erb
@@ -39,8 +39,8 @@
 
   <div class="field">
     <div class="ui toggle checkbox">
-      <%= f.check_box :public %>
-      <%= f.label :public, t('.public') %>
+      <%= f.check_box :hidden %>
+      <%= f.label :hidden, t('.hidden') %>
     </div>
   </div>
 
