--- a/app/assets/javascripts/editor.js.coffee.erb
+++ b/app/assets/javascripts/editor.js.coffee.erb
@@ -8,27 +8,13 @@ $(document).on 'ready page:load', ->
       toolbar: [
         'title','bold','italic','underline','strikethrough','color','|'
         'ol','ul','blockquote','code','table','link','image','hr','|'
-        'indent','outdent','|'
-        'source'
+        'indent','outdent','alignment'
       ]
       pasteImage: true
       defaultImage: '<%= image_path "upload-loading.png" %>'
       upload: url: '<%= (ENV["RAILS_RELATIVE_URL_ROOT"]||'') + "/pictures" %>'
-      allowedTags: [
-        'br', 'a', 'img', 'b', 'strong', 'i', 'u', 'font', 'p', 'ul', 'ol',
-        'li', 'blockquote', 'pre', 'h1', 'h2', 'h3', 'h4', 'hr', 'embed', 'iframe'
-      ]
+      allowedTags: ['embed', 'iframe']
       allowedAttributes:
-        img: ['src', 'alt', 'width', 'height', 'data-image-src',
-          'data-image-size', 'data-image-name', 'data-non-image']
-        a: ['href', 'target']
-        font: ['color']
-        pre: ['data-lang', 'class']
-        p: ['data-indent']
-        h1: ['data-indent']
-        h2: ['data-indent']
-        h3: ['data-indent']
-        h4: ['data-indent']
         embed: ['src', 'allowFullScreen', 'quality', 'width', 'height', 'align',
           'allowScriptAccess', 'type']
         iframe: ['height', 'width', 'src', 'frameborder', 'allowfullscreen']
