--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -83,9 +83,11 @@
     <% end %>
   </div>
   <div class="actions">
-    <button type="button" class="ui blue button"
-        onClick="$('#new-folder-form').submit();"><%=t '.modal.button.submit' %></button>
-    <button type="button" class="ui button"><%=t '.modal.button.cancel' %></button>
+    <button type="button" class="ui positive right labeled icon button"
+        onClick="$('#new-folder-form').submit();">
+        <%=t '.modal.button.submit' %><i class="checkmark icon"></i>
+    </button>
+    <button type="button" class="ui cancel button"><%=t '.modal.button.cancel' %></button>
   </div>
 </div>
 
@@ -116,9 +118,11 @@
     <% end %>
   </div>
   <div class="actions">
-    <button type="button" class="ui blue button"
-        onClick="$('#new-file-form').submit();"><%=t '.modal.button.submit' %></button>
-    <button type="button" class="ui button"><%=t '.modal.button.cancel' %></button>
+    <button type="button" class="ui positive right labeled icon button"
+        onClick="$('#new-file-form').submit();">
+        <%=t '.modal.button.submit' %><i class="checkmark icon"></i>
+    </button>
+    <button type="button" class="ui cancel button"><%=t '.modal.button.cancel' %></button>
   </div>
 </div>
 
